fixed header & made color darker for better contrast

--- a/src/main.css
+++ b/src/main.css
@@ -44,7 +44,7 @@ header {
 }
 
 #start {
-    background-color: hsl(140, 60%, 45%);
+    background-color: hsl(140, 60%, 40%);
     padding: 1.25rem;
     text-align: left;
     text-align: center;
@@ -67,7 +67,7 @@ header nav a {
     font-weight: 300;
     transition: color 0.25s;
 } header nav a:hover {
-    color: hsl(140, 60%, 45%);
+    color: hsl(140, 60%, 40%);
 }
 
 main {
@@ -84,12 +84,16 @@ main h2 {
     font-weight: 500;
 }
 
+article {
+    width: 100%;
+}
+
 article h1 {
     font-size: 4em;
 }
 
 article p {
-    font-size: 1.5em;
+    font-size: 1.25em;
     font-weight: 300;
 }
 
@@ -118,14 +122,17 @@ article hr {
     align-items: flex-start;
     margin: 2rem;
     flex-direction: column;
-    font-weight: 300;
+}
+
+#home p {
+    font-size: 1.5em
 }
 
 #countdown {
     width: 50%;
     margin: 0;
     border-radius: 1rem;
-    background-color: hsl(140, 60%, 45%);
+    background-color: hsl(140, 60%, 40%);
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -143,14 +150,9 @@ article hr {
     align-items: center;
 }
 
-#countdown p {
-    font-weight: 300;
-    font-size: 1.25em;
-}
-
 #about {
+    padding: 4rem 0 4rem 0;
     background-color: #1C1C1C;
-    height: 75vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -165,8 +167,19 @@ article hr {
     width: 70%;
 }
 
-#about p {
-    font-size: 1.25em;
+#schedule {
+    padding: 4rem 0 4rem 0;
+    background-color: hsl(140, 60%, 40%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+} #schedule div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 70%;
 }
 
 footer {
